--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<p> Hello world! </p>
+ <!DOCTYPE html>
+<html>
+<head>
+<title>Javier S</title>
+</head>
+<body>
+
+
+<p>Hello world!</p>
+
+</body>
+</html> 
