--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
  <!DOCTYPE html>
 <html>
 <head>
-<title>Javier S</title>
+<title>J.S.</title>
 </head>
 <body>
-
-
-<p>Hello world!</p>
+ 
+ <img src="helloworld.png" alt="Hello World!">
 
 </body>
 </html> 
