--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
  <!DOCTYPE html>
 <html>
 <head>
-<title>J.S.</title>
+ 
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+ 
+<title>Javier S.</title>
 </head>
+ 
 <body>
  
- <img src="helloworld.png" alt="Hello World!">
+<img src="helloworld.png" alt="Hello World!">
 
+ 
 </body>
 </html> 
