--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
  
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="favicon.ico">
  
 <title>Javier S.</title>
 </head>
