--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  
-<link rel="shortcut icon" href="favicon.ico">
+<link rel="shortcut icon" src="favicon.ico">
  
 <title>Javier S.</title>
 </head>
