--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
  
 <link rel="shortcut icon" href="https://javier-solis.github.io/favicon.ico">
  
-<title>Javier S.</title>
+<title>Javier</title>
 </head>
  
 <body>
- 
-<a href="https://github.com/javier-solis/Archery"> Archery</a>
+ <h1>Past Projects I've Made:</h1>
+ <a href="https://github.com/javier-solis/Archery"> Archery</a>
  
 </body>
 </html> 
