--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<head>
- 
-<link rel="shortcut icon" href="https://javier-solis.github.io/favicon.ico">
- 
-<title>Javier</title>
-</head>
- 
+    <head>
+        <title>Javier's Personal Website</title>
+    </head>
 <body>
- <h1>Past Projects I've Made:</h1>
- <a href="https://github.com/javier-solis/Archery"> Archery</a>
- 
-</body>
-</html> 
+    <h1>About Me</h1>
+        <p>Hi! My name is Javier Solis and I am a undergraduate student at MIT, class of 2024. Below you can find links to my past/current projects.</p>
+        <p>PS - This website is incomplete, but I hope to make large edits soon!</p>
+
+    <h1>Personal Projects</h1>
+        <p> <a href="https://github.com/javier-solis/Archery" >Pi Archery</a> - A simple 2D virtual reality archery game housed in an acrylic bow. </p>
+        <p> <a href="https://projectsol.net/" > Project Sol </a> -  Documentation for an entry-level Robot Operating System (ROS) based robot useful for SLAM and AI applications. (Ongoing) </p>
+        <p> <a href="https://github.com/javier-solis/notes" > Software Notes </a> - A compilation of notes that I've made, related to software development.  </p>
+
+    <h1>Collaborative Work</h1>
+        <p> <a href="https://sipb.mit.edu/iap/2022/clf/" > Command Line Fundamentals </a> - Copresented 2 lectures designed to teach undergraduates how to effectively use the Unix terminal</p>
+    </body>
+</html>
