--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             position: absolute; 
             bottom: 1%; 
             right: 1%; 
-            font-size: 10px;
+            font-size: 12px;
         }
         </style> 
     </head>
@@ -41,7 +41,7 @@
         <div class="lastModified">
             <script>
                 if (Date.parse(document.lastModified) != 0){
-                    document.write("<p>Last Modified: " + document.lastModified + " EST</p>");
+                    document.write("<p>Last Modified: " + document.lastModified + " UTC</p>");
                 }
             </script> 
         </div>
