Reorder some content

--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
                 This website contains a collection of all of my past and ongoing software-related activities.</p>
 
             <h3>Personal Projects</h3>
-            <p> <b>Educational</b> </p>
+            <p> <b>Informational</b> </p>
             <ul>
-            <li> <a href="https://github.com/javier-solis/Archery">Pi Archery</a> – A 2D virtual reality archery game housed in an acrylic bow</li> </br>
             <li> <a href="https://projectsol.net/">Project Sol</a> – Documentation for an entry-level Robot Operating System (ROS) based robot useful for simultaneous localization and mapping (SLAM) applications <i>(ongoing development)</i></li> </br>
             <li> <a href="https://github.com/javier-solis/notes">Software Notes</a> – A compilation of notes that I've made, related to software development  </li>
             </ul>
 
             <p> <b>Creative</b> </p>
             <ul>
-                <li><a href="https://github.com/javier-solis/javier-solis.github.io">Personal Website</a> – The source code for this website, whose objectives are to be minimalist, fast, and rich in detail</li>
+                <li> <a href="https://github.com/javier-solis/Archery">Pi Archery</a> – A 2D virtual reality archery game housed in an acrylic bow</li> </br>
+                <li> <a href="https://github.com/javier-solis/javier-solis.github.io">Personal Website</a> – The source code for this website, whose objectives are to be minimalist, fast, and rich in detail</li>
             </ul>
         
             <h3>Collaborations</h3> 
