Updates to html content

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         </div>
         <!-- <p id="toggle" onclick="modeToggle()">light/dark</p> -->
         <div class="mainContent">
-            <p>Hello! I'm an undergraduate Computer Science student at the Massachusetts Institute of Technology, Class of 2024. <br> 
+            <p>Hello! I'm an undergraduate Computer Science and Engineering student at the Massachusetts Institute of Technology, Class of 2024. <br>
                 This website contains a collection of all of my past and ongoing software-related activities.</p>
 
             <h3>Personal Projects</h3>
             <p> <b>Informational</b> </p>
             <ul>
-            <li> <a href="https://github.com/javier-solis/notes">Software Notes</a> – A compilation of notes that I've made, related to software development  </li>
+            <li> <a href="https://projectsol.net/">Project Sol</a> – A compilation of notes that I've made,  primarily related to GNU/Linux topics [WIP] </li>
             </ul>
 
             <p> <b>Creative</b> </p>
@@ -28,11 +28,12 @@
                 <li> <a href="https://github.com/javier-solis/Archery">Pi Archery</a> – A 2D virtual reality archery game housed in an acrylic bow</li> </br>
                 <li> <a href="https://github.com/javier-solis/javier-solis.github.io">Personal Website</a> – The front-end source code for this website</li>
             </ul>
-        
-            <h3>Collaborations</h3> 
+
+            <h3>Collaborations</h3>
             <p><b>MIT SIPB</b></p>
             <ul>
-                <li><a href="https://sipb.mit.edu/iap/2022/clf/">Command Line Fundamentals</a> – Designed and co-presented 2 lectures that teach students essential Unix shell commands and navigation flow.</li>
+                <li><a href="https://sipb.mit.edu/iap/2022/clf/">Command Line Fundamentals</a> – Designed and co-presented 2 beginner-friendly lectures on Unix shell commands and concepts.
+                </li>
             </ul>
 
             <br>
