--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <body>
         <div class="header">
             <h2>Javier Solis</h2>
-            <p>MIT Student Learning CS<br>
+            <p>Computer Science and Engineering Student at MIT<br>
             <a href="mailto:javsolis@mit.edu">javsolis@mit.edu</a></p>
         </div>
         <!-- <p id="toggle" onclick="modeToggle()">light/dark</p> -->
         <div class="mainContent">
-            <p>Hello! I'm an undergraduate Computer Science and Engineering student at the Massachusetts Institute of Technology, Class of 2024. <br>
+            <p>Undergraduate Computer Science and Engineering student at the Massachusetts Institute of Technology, Class of 2024. <br>
                 This website contains a collection of all of my past and ongoing software-related activities.</p>
 
             <h3>Personal Projects</h3>
             <p> <b>Informational</b> </p>
             <ul>
-            <li> <a href="https://projectsol.net/">Project Sol</a> – A compilation of notes that I've made,  primarily related to GNU/Linux topics [WIP] </li>
+            <li> <a href="https://notes.projectsol.net/">Project Sol</a> – A compilation of notes that I've made,  primarily related to GNU/Linux topics [WIP] </li>
             </ul>
 
             <p> <b>Creative</b> </p>
