--- a/index.html
+++ b/index.html
@@ -1,44 +1,83 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Javier Solis</title>
-        <link rel="stylesheet" href="main.css">
-        <script src="main.js"></script> 
-    </head>
+  <head>
+    <title>Javier Solis</title>
+    <link rel="stylesheet" href="main.css">
+    <script src="main.js"></script> 
+  </head>
 
-    <body>
-        <div class="header">
-            <h2>Javier Solis</h2>
-            <a href="mailto:javsolis@mit.edu">javsolis@mit.edu</a></p>
-        </div>
-        <!-- <p id="toggle" onclick="modeToggle()">light/dark</p> -->
-        <div class="mainContent">
-            <p>Undergraduate Computer Science and Engineering student at the Massachusetts Institute of Technology, Class of 2024. <br>
-                This website contains a collection of all of my past and ongoing software-related activities.</p>
+  <body>
+    <div class="header">
+        <h2>Javier Solis</h2>
+          <p>Lifelong Learner<br>
+          MIT Undergraduate</p>
+    </div>
 
-            <h3>Personal Projects</h3>
-            <p> <b>Informational</b> </p>
+    <div class="mainContent">
+      <h2>Projects</h2>
+        <h3>Personal</h3>
+          <p> <b>Informational</b> </p>
+              <ul>
+                  <li> <a href="https://notes.projectsol.net/">Project Sol</a> – A compilation of my software notes, primarily on GNU/Linux topics </li>
+              </ul>
+
+          <p> <b>Creative</b> </p>
+              <ul>
+                  <li> <a href="https://github.com/javier-solis/javier-solis.github.io">My Portfolio Website</a> – The front-end source code for this website</li>
+                  <li> <a href="https://github.com/javier-solis//archery-pi">Pi Archery</a> – A 2D virtual reality archery game housed in an acrylic bow</li> </br>
+              </ul>
+
+          <h3>Collaborative</h3>
+            <p><b>Student Information Processing Board (Club)</b></p>
             <ul>
-            <li> <a href="https://notes.projectsol.net/">Project Sol</a> – A compilation of notes that I've made,  primarily related to GNU/Linux topics [WIP] </li>
+                <li><a href="https://sipb.mit.edu/iap/2022/clf/">Command Line Fundamentals</a> – Two beginner-friendly lectures on Unix shell commands and concepts</li>
+            </ul>
+          
+            <p><b>Usable Programming (Research Group)</b></p>
+            <ul>
+                <li><a href="https://github.com/uid/gitstream">GitStream</a> – A Legacy Git tutorial system used in a core computer science class</li>
             </ul>
 
-            <p> <b>Creative</b> </p>
+            <p><b>Coursework</b></p>
             <ul>
-                <li> <a href="https://github.com/javier-solis/Archery">Pi Archery</a> – A 2D virtual reality archery game housed in an acrylic bow</li> </br>
-                <li> <a href="https://github.com/javier-solis/javier-solis.github.io">Personal Website</a> – The front-end source code for this website</li>
+                <li><a href="https://github.com/javier-solis/smart-kicks">Smart Kicks</a> – An IoT wearable for navigating MIT</li>
             </ul>
+      <br>
+      <h2>Skill Sets</h2>
 
-            <h3>Collaborations</h3>
-            <p><b>MIT SIPB</b></p>
-            <ul>
-                <li><a href="https://sipb.mit.edu/iap/2022/clf/">Command Line Fundamentals</a> – Designed and co-presented 2 beginner-friendly lectures on Unix shell commands and concepts.
-                </li>
-            </ul>
+        <h3>Technologies</h3>
+          <ul>
+              <li>GNU/Linux</li>
+              <li>Docker</li>
+              <li>Git</li>
+              <li>Nginx</li>
+              <li>Vim</li>
+              <li>VirtualBox</li>
+              <li>Docker</li>
+          </ul>
 
-            <br>
-            <hr style="margin-bottom: 0px;">
-            <p class="cornerText" style="left:0"><a href="https://github.com/javier-solis/personal-website/blob/main/roadmap.md#versions=">v1</a></p>
-            <div class="cornerText" style="right:0" id="lastModified"></div>
-        </div>
-    </body>
+        <h3>Languages</h3>
+          <ul>
+              <li>TypeScript</li>
+              <li>C</li>
+              <li>Python</li>
+              <li>HTML/JS/CSS</li>
+              <li>Bash</li>
+              <li>Rust</li>
+              <li>R</li>
+              <li>SQL</li>
+          </ul>
+
+      <br>
+      <h2>Contact Information</h2>
+        <p>Email: <a href="mailto:javsolis@mit.edu">javsolis@mit.edu</a></p>
+        <p>GitHub: <a href="https://github.com/javier-solis">/javier-solis</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/javier-solis1/">/javier-solis1</a></p>
+  
+      <br>
+      <hr style="margin-bottom: 0px;">
+      <div class="cornerText" style="left:0" onclick="modeToggle()"><p>light/dark mode</p></div>
+      <div class="cornerText" style="right:0" id="lastModified"></div>
+    </div>
+  </body>
 </html>
