placed skill sets side by side

--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
                 <li><a href="https://github.com/javier-solis/smart-kicks">Smart Kicks</a> – An IoT wearable for navigating MIT</li>
             </ul>
       <br>
+      <div>
       <h2>Skill Sets</h2>
 
+        <div class="skill-set">
         <h3>Technologies</h3>
           <ul>
               <li>GNU/Linux</li>
@@ -55,7 +57,9 @@
               <li>VirtualBox</li>
               <li>Docker</li>
           </ul>
+        </div>
 
+        <div class="skill-set">
         <h3>Languages</h3>
           <ul>
               <li>TypeScript</li>
@@ -67,6 +71,8 @@
               <li>R</li>
               <li>SQL</li>
           </ul>
+        </div>
+      </div>
 
       <br>
       <h2>Contact Information</h2>
