--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
           <p> <b>Creative</b> </p>
               <ul>
-                  <li> <a href="https://github.com/javier-solis/javier-solis.github.io">My Portfolio Website</a> – The front-end source code for this website</li>
+                  <li> <a href="https://github.com/javier-solis/javsolis.dev">My Portfolio Website</a> – The front-end source code for this website</li>
                   <li> <a href="https://github.com/javier-solis//archery-pi">Pi Archery</a> – A 2D virtual reality archery game housed in an acrylic bow</li> </br>
               </ul>
 
