--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   </head>
 
   <body>
-    <div class="header">
-      <h2>Javier Solis</h2>
-        <p>Lifelong Learner<br>
-        MIT Undergraduate</p>
-    </div>
+
 
     <div class="content">
+      <div class="header">
+        <h1>Javier Solis</h1>
+          <p>Lifelong Learner<br>
+          MIT Undergraduate</p>
+      </div>
+
       <h2>Projects</h2>
         <h3>Personal</h3>
           <p><b>Informational</b></p>
@@ -50,6 +52,19 @@
         <h2>Skill Sets</h2>
 
           <div class="skill-set">
+            <h3>Languages</h3>
+              <ul>
+                  <li>TypeScript</li>
+                  <li>C</li>
+                  <li>Python</li>
+                  <li>HTML/JS/CSS</li>
+                  <li>Bash</li>
+                  <li>Rust</li>
+                  <li>R</li>
+                  <li>SQL</li>
+              </ul>
+          </div>
+          <div class="skill-set">
             <h3>Technologies</h3>
               <ul>
                   <li>GNU/Linux</li>
@@ -61,18 +76,13 @@
                   <li>Docker</li>
               </ul>
           </div>
-
           <div class="skill-set">
-            <h3>Languages</h3>
+            <h3>Concepts</h3>
               <ul>
-                  <li>TypeScript</li>
-                  <li>C</li>
-                  <li>Python</li>
-                  <li>HTML/JS/CSS</li>
-                  <li>Bash</li>
-                  <li>Rust</li>
-                  <li>R</li>
-                  <li>SQL</li>
+                <li>Operating Systems</li>
+                <li>Network Protocols</li>
+                <li>Distributed Systems</li>
+                <li>Server Administration</li>
               </ul>
           </div>
       </div>
