--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <h3>Personal</h3>
           <p><b>Informational</b></p>
               <ul>
-                  <li> <a href="https://notes.projectsol.net/">Project Sol</a> – A compilation of my software notes, primarily on GNU/Linux topics </li>
+                  <li> <a href="https://notes.projectsol.net/">Project Sol</a> – A compilation of my software development notes, primarily on GNU/Linux topics </li>
               </ul>
 
           <p><b>Creative</b></p>
               <ul>
-                  <li> <a href="https://github.com/javier-solis/javsolis.dev">javsolis.dev</a> – Source code for this portfolio website</li>
-                  <li> <a href="https://github.com/javier-solis//archery-pi">Pi Archery</a> – A 2D virtual reality archery game housed in an acrylic bow</li> </br>
+                  <li> <a href="https://github.com/javier-solis/javsolis.dev">javsolis.dev</a> – This portfolio website</li>
+                  <li> <a href="https://github.com/javier-solis//archery-pi">Pi Archery</a> – A 2D VR archery game</li> </br>
               </ul>
 
         <h3>Collaborative</h3>
@@ -38,7 +38,7 @@
         
           <p><b>Usable Programming (Research Group)</b></p>
             <ul>
-                <li><a href="https://github.com/uid/gitstream">GitStream</a> – A Legacy Git tutorial system used in a core computer science class</li>
+                <li><a href="https://github.com/uid/gitstream">GitStream</a> – A legacy Git tutorial system used in a core computer science class</li>
             </ul>
 
           <p><b>Coursework</b></p>
