Modified gitstream description

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
           <p><b>Usable Programming (Research Group)</b></p>
             <ul>
-                <li><a href="https://github.com/uid/gitstream">GitStream</a> – A legacy Git tutorial system used in a core computer science class</li>
+                <li><a href="https://github.com/uid/gitstream">GitStream</a> – An interactive Git tutorial system</li>
             </ul>
 
           <p><b>Coursework</b></p>
