--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
     <div class="content">
       <div class="header">
         <h1>Javier Solis</h1>
-          <p>Lifelong Learner<br>
-          MIT Undergraduate</p>
+          <p>MIT Alum</p>
       </div>
 
       <h2>Projects</h2>
         <h3>Personal</h3>
-          <p><b>Informational</b></p>
+          <!-- <p><b>Informational</b></p>
               <ul>
                   <li> <a href="https://notes.projectsol.net/">Project Sol</a> – A compilation of my software development notes, primarily on GNU/Linux topics </li>
-              </ul>
+              </ul> -->
 
           <p><b>Creative</b></p>
               <ul>
@@ -61,7 +60,6 @@
                   <li>Bash</li>
                   <li>Rust</li>
                   <li>R</li>
-                  <li>SQL</li>
               </ul>
           </div>
           <div class="skill-set">
@@ -74,6 +72,7 @@
                   <li>Vim</li>
                   <li>VirtualBox</li>
                   <li>Docker</li>
+                  <li>Node.js</li>
               </ul>
           </div>
           <div class="skill-set">
