change style of cursor when over light/dark toggle

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   
       <br>
       <hr style="margin-bottom: 0px;">
-      <div class="cornerText" style="left:0" onclick="modeToggle()"><p>light/dark mode</p></div>
+      <div class="cornerText" id="cornerTextLeft" style="left:0" onclick="modeToggle()"><p>light/dark mode</p></div>
       <div class="cornerText" style="right:0" id="lastModified"></div>
     </div>
   </body>
