--- a/index.html
+++ b/index.html
@@ -93,9 +93,14 @@
         <p>LinkedIn: <a href="https://www.linkedin.com/in/javier-solis1/">/javier-solis1</a></p>
   
       <br>
-      <hr style="margin-bottom: 0px;">
-      <div class="cornerText" id="cornerTextLeft" style="left:0" onclick="toggleColorTheme()"><p>light/dark mode</p></div>
-      <div class="cornerText" style="right:0" id="lastModified"></div>
+      <hr>
+      <br>
+
+      <footer>
+        <div id="modeToggle" onclick="toggleColorTheme()"><p>light/dark toggle</p></div>
+        <div id="lastModified"></div>
+      </footer>
+      
     </div>
   </body>
 </html>
