--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <h3>Personal</h3>
           <!-- <p><b>Informational</b></p>
               <ul>
-                  <li> <a href="https://notes.projectsol.net/">Project Sol</a> – A compilation of my software development notes, primarily on GNU/Linux topics </li>
+                  <li> <a href="">Project Sol</a> – A compilation of my software development notes, primarily on GNU/Linux topics </li>
+                  <li> <a href="">FOSS Library</a> – Summary of FOSS software that I recommend exploring
               </ul> -->
 
           <p><b>Creative</b></p>
               <ul>
                   <li> <a href="https://github.com/javier-solis/javsolis.dev">javsolis.dev</a> – This portfolio website</li>
-                  <li> <a href="https://github.com/javier-solis//archery-pi">Pi Archery</a> – A 2D VR archery game</li> </br>
               </ul>
 
         <h3>Collaborative</h3>
@@ -100,7 +100,7 @@
         <div id="modeToggle" onclick="toggleColorTheme()"><p>light/dark toggle</p></div>
         <div id="lastModified"></div>
       </footer>
-      
+
     </div>
   </body>
 </html>
