move contact info section

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 
   <body>
 
-
     <div class="content">
       <div class="header">
         <h1>Javier Solis</h1>
           <p>MIT Alum</p>
+          <p>
+            <a class="nf nf-md-email_box" href="mailto:javsolis@mit.edu" target="_blank"></a>
+            <a class="nf nf-fa-github_square" href="https://github.com/javier-solis" target="_blank"></a>
+            <a class="nf nf-md-linkedin" href="https://www.linkedin.com/in/javier-solis1/" target="_blank"></a>
+          </p>  
       </div>
 
       <h2>Projects</h2>
@@ -86,12 +90,6 @@
           </div>
       </div>
 
-      <br>
-      <h2>Contact Information</h2>
-        <p>Email: <a href="mailto:javsolis@mit.edu">javsolis@mit.edu</a></p>
-        <p>GitHub: <a href="https://github.com/javier-solis">/javier-solis</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/javier-solis1/">/javier-solis1</a></p>
-  
       <br>
       <hr>
       <br>
