--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <h1>Javier Solis</h1>
           <p>MIT Alum</p>
           <p>
-            <a class="nf nf-md-email_box" href="mailto:javsolis@mit.edu" target="_blank"></a>
-            <a class="nf nf-fa-github_square" href="https://github.com/javier-solis" target="_blank"></a>
-            <a class="nf nf-md-linkedin" href="https://www.linkedin.com/in/javier-solis1/" target="_blank"></a>
+            <a class="nf nf-md-email_box" href="mailto:javsolis@mit.edu"></a>
+            <a class="nf nf-fa-github_square" href="https://github.com/javier-solis"></a>
+            <a class="nf nf-md-linkedin" href="https://www.linkedin.com/in/javier-solis1/"></a>
           </p>  
       </div>
 
