--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
 
           <p><b>Creative</b></p>
               <ul>
-                  <li> javsolis.dev <a class="nf nf-md-source_repository" href="https://github.com/javier-solis/javsolis.dev"></a> – This portfolio website</li>
+                  <li> javsolis.dev <a class="proj-repo" href="https://github.com/javier-solis/javsolis.dev"></a> – This portfolio website</li>
               </ul>
 
         <h3>Collaborative</h3>
           <p><b>Student Information Processing Board (Club)</b></p>
             <ul>
-                <li> Command Line Fundamentals <a class="nf nf-md-web_box" href="https://sipb.mit.edu/iap/2022/clf/"></a> – Beginner-friendly lectures on Unix shell commands and concepts</li>
+                <li> Command Line Fundamentals <a class="proj-website" href="https://sipb.mit.edu/iap/2022/clf/"></a> – Beginner-friendly lectures on Unix shell commands and concepts</li>
             </ul>
         
           <p><b>Usable Programming (Research Group)</b></p>
             <ul>
-                <li> GitStream <a class="nf nf-md-source_repository" href="https://github.com/uid/gitstream"></a> – An interactive Git tutorial system</li>
+                <li> GitStream <a class="proj-repo" href="https://github.com/uid/gitstream"></a> – An interactive Git tutorial system</li>
             </ul>
 
           <p><b>Coursework</b></p>
             <ul>
-                <li> Smart Kicks <a class="nf nf-md-source_repository" href="https://github.com/javier-solis/smart-kicks"></a> – An IoT wearable for navigating MIT</li>
+                <li> Smart Kicks <a class="proj-repo" href="https://github.com/javier-solis/smart-kicks"></a> – An IoT wearable for navigating MIT</li>
             </ul>
       
       <br>
