--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
                   <li> <a href="">FOSS Library</a> – Summary of FOSS software that I recommend exploring
               </ul> -->
 
+          <!-- <p><b>Analytical</b></p>
+            <ul>
+              <li> Ark <a class="proj-repo" href="https://github.com/javier-solis/ark"></a> – A compact CLI app for Academic Record Keeping.</li>
+            </ul> -->
+
+              
           <p><b>Creative</b></p>
               <ul>
                   <li> javsolis.dev <a class="proj-repo" href="https://github.com/javier-solis/javsolis.dev"></a> – This portfolio website</li>
@@ -95,6 +101,7 @@
       <br>
 
       <footer>
+        <!-- nf-fa-lightbulb -->
         <div id="modeToggle" onclick="toggleColorTheme()"><p>light/dark toggle</p></div>
         <div id="lastModified"></div>
       </footer>
