add new section titled 'Analytical'; modify content

--- a/index.html
+++ b/index.html
@@ -22,17 +22,13 @@
 
       <h2>Projects</h2>
         <h3>Personal</h3>
-          <!-- <p><b>Informational</b></p>
-              <ul>
-                  <li> <a href="">Project Sol</a> – A compilation of my software development notes, primarily on GNU/Linux topics </li>
-                  <li> <a href="">FOSS Library</a> – Summary of FOSS software that I recommend exploring
-              </ul> -->
+          <!-- <p><b>Informational</b></p>-->
 
-          <!-- <p><b>Analytical</b></p>
+          <p><b>Analytical</b></p>
             <ul>
-              <li> Ark <a class="proj-repo" href="https://github.com/javier-solis/ark"></a> – A compact CLI app for Academic Record Keeping.</li>
-            </ul> -->
-
+              <li> todoLint <a class="proj-repo" href="https://github.com/javier-solis/todolint"></a> – Lightweight tool for collecting and processing 'todo' comments</li>
+              <li> Ark <a class="proj-repo" href="https://github.com/javier-solis/ark"></a> – CLI app for Academic Record Keeping</li>
+            </ul>
               
           <p><b>Creative</b></p>
               <ul>
