add WIP icon to personal projects

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
           <p><b>Analytical</b></p>
             <ul>
-              <li> todoLint <a class="proj-repo" href="https://github.com/javier-solis/todolint"></a> – Lightweight tool for collecting and processing 'todo' comments</li>
-              <li> Ark <a class="proj-repo" href="https://github.com/javier-solis/ark"></a> – CLI app for Academic Record Keeping</li>
+              <li> todoLint [<span class="proj-wip"></span>, <a class="proj-repo" href="https://github.com/javier-solis/todolint"></a>] – Lightweight tool for collecting and processing 'todo' comments</li>
+              <li> Ark [<span class="proj-wip"></span>, <a class="proj-repo" href="https://github.com/javier-solis/ark"></a>] – CLI app for Academic Record Keeping</li>
             </ul>
               
           <p><b>Creative</b></p>
               <ul>
-                  <li> javsolis.dev <a class="proj-repo" href="https://github.com/javier-solis/javsolis.dev"></a> – This portfolio website</li>
+                  <li> javsolis.dev [<span class="proj-wip"></span>, <a class="proj-repo" href="https://github.com/javier-solis/javsolis.dev"></a>] – This portfolio website</li>
               </ul>
 
         <h3>Collaborative</h3>
