--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a class="header-linkedin" href="https://www.linkedin.com/in/javier-solis1/"></a>
           </p>  
       </div>
-
+      <!-- todo: mention that blue-colored icons are links -->
       <h2>Projects</h2>
         <h3>Personal</h3>
           <!-- <p><b>Informational</b></p>-->
@@ -97,7 +97,7 @@
       <br>
 
       <footer>
-        <!-- nf-fa-lightbulb -->
+        <!-- todo: add lightbulb icon -->
         <div id="modeToggle" onclick="toggleColorTheme()"><p>light/dark toggle</p></div>
         <div id="lastModified"></div>
       </footer>
