replace 'header' div with header element

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <div class="header">
+    <header>
       <h1>Javier Solis</h1>
         <p>MIT Alum</p>
         <p>
@@ -16,7 +16,7 @@
           <a class="header-github" href="https://github.com/javier-solis"></a>
           <a class="header-linkedin" href="https://www.linkedin.com/in/javier-solis1/"></a>
         </p>  
-    </div>
+    </header>
     <!-- todo: mention that blue-colored icons are links -->
     <h2>Projects</h2>
       <h3>Personal</h3>
