add additional section elements

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         </p>  
     </header>
     <!-- todo: mention that blue-colored icons are links -->
+    <section>
     <h2>Projects</h2>
+      <section>
       <h3>Personal</h3>
         <!-- <p><b>Informational</b></p>-->
 
@@ -32,7 +34,8 @@
             <ul>
                 <li> javsolis.dev [<span class="proj-wip"></span>, <a class="proj-repo" href="https://github.com/javier-solis/javsolis.dev"></a>] – This portfolio website</li>
             </ul>
-
+      </section>
+      <section>
       <h3>Collaborative</h3>
         <p><b>Student Information Processing Board (Club)</b></p>
           <ul>
@@ -48,10 +51,11 @@
           <ul>
               <li> Smart Kicks <a class="proj-repo" href="https://github.com/javier-solis/smart-kicks"></a> – An IoT wearable for navigating MIT</li>
           </ul>
-    
+      </section>
+    </section>
     <br>
 
-    <div>
+    <section>
       <h2>Skill Sets</h2>
 
         <div class="skill-set">
@@ -88,7 +92,7 @@
               <li>Server Administration</li>
             </ul>
         </div>
-    </div>
+    </section>
 
     <br>
     <hr>
