Add Umami analytics script

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
+
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="80050cb7-3a64-48ba-832d-8f1e117b3139"></script>
   </head>
 
   <body>
